tests/positive/FancyPaths/home/Home.juvix
module Home;

axiom home : Type;
